# pixi-manga-manager

./: .gitignore  CHANGELOG  README.md  pyproject.toml
src/pixi_manga_manager/: __main__.py  app.py
